--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         3000 Victoria Park · North York, ON M2J 4Y2 · (647) 395-2113 ·
-                        <a href="mailto:name@email.com">chetan.shankar.cs@gmail.com</a>
+                        <a href="mailto:chetan.shankar.cs@gmail.com">chetan.shankar.cs@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
                         A passionate Software Developer with nearly three years of practice in the IT industry with agile methodology. A goal-oriented and focused individual who is learning new concepts in the tech-industry every day and always open to working with new technologies.
