New: added StackOverflow flair fixed: wordings in experience details

--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
                         <span class="text-primary">Shankar</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3000 Victoria Park · North York, ON M2J 4Y2 · (647) 395-2113 ·
+                        3000 Victoria Park · North York · ON M2J 4Y2 · (647) 395-2113
                         <a href="mailto:chetan.shankar.cs@gmail.com">chetan.shankar.cs@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
                         A passionate Software Developer with nearly three years of practice in the IT industry with agile methodology. A goal-oriented and focused individual who is learning new concepts in the tech-industry every day and always open to working with new technologies.
                     </p>
+                    <p><a href="https://stackoverflow.com/users/6121643/irony-stack">
+                        <img src="https://stackoverflow.com/users/flair/6121643.png?theme=dark" width="208" height="58"
+                             alt="profile for Irony Stack at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
+                             title="profile for Irony Stack at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="//www.linkedin.com/in/chetan-shankar/"  ><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="//github.com/shankar213"><i class="fab fa-github"></i></a>
                         <a class="social-icon" target="_blank" href="//stackoverflow.com/users/6121643/irony-stack"><i class="fab fa-stack-overflow"></i></a>
+
                     </div>
                 </div>
             </section>
@@ -120,13 +126,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-3">Netex Enterprise, Toronto ON</div>
-                            <li>Got hired as a Software developer after finishing co-op term in December</li>
+                            <li>Got hired as a Software developer after finishing co-op terms</li>
+                            <li>Designed entirely custom UI for Home Assistant project</li>
                             <li>Integrated Asana APIs for internal application of the Netex Enterprise</li>
-                            <li>Helped senior developer in building website using Angular 7/8, Nodejs, and PHP with MYSQL</li>
+                            <li>Build website using Angular 7/8, Nodejs, and PHP with MYSQL</li>
                             <li>Upgrading angular projects from without cli to angular 8 with cli</li>
-                            <li>Remain detail-oriented while perform code-reviews on day to day basis</li>
+                            <li>Remain detail-oriented while performing code-reviews on day to day basis</li>
                             <li>Demonstrated good communication skills while reporting project updates to manager and clients</li>
-                            <li>Used beanstalk as a VCS and Asana as a project management tool</li>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 – Present</span></div>
                     </div>
@@ -134,11 +140,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student Researcher </h3>
                             <div class="subheading mb-3">WIMTACH, Centennial College, Toronto ON</div>
-                            <li>Worked as a part of a team developing order management website for McCray Optical</li>
-                            <li>Created entire backend in Node JS with Express for the website with Amazon AWS S3 integration</li>
+                            <li>Worked as a part of a team developing an order management website for McCray Optical</li>
+                            <li>Created complete backend in Node JS with Express for the website with Amazon AWS S3 integration</li>
                             <li>Hosted the website on AWS elastic beanstalk server with docker container</li>
                             <li>Reported to clients on a weekly basis for project updates and status via meeting and emails</li>
-                            <li>Performed code review for the team members and assisted them for bug fixes</li>
+                            <li>Performed code review for the team members and assisted them with bug fixes</li>
                             <li>Integrated SendGrid email services to send automated emails</li>
 
                         </div>
@@ -148,11 +154,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Associate Software Developer</h3>
                             <div class="subheading mb-3">SRKAY Consulting Group, Gujrat, India</div>
-                            <li>Worked on project SCIKEY (product of SRKAY CG) (scikey.ai), as a MEAN stack developer with agile methodology &sprint planning to ship feature in shortest time possible</li>
+                            <li>Worked on project SCIKEY (product of SRKAY CG) (scikey.ai), as a MEAN stack developer with agile methodology & sprint planning to ship the feature in the shortest time possible</li>
                             <li>Gathered requirements and reported progress on daily basis using JIRA and online meetings</li>
-                            <li>Integrated angular components with server-side RESTful APIs and Created REST APIs using express.js</li>
+                            <li>Created REST APIs using express.js and integrated with Angular frontend</li>
                             <li>Rewrote old code for optimization and to remove security vulnerability</li>
-                            <li>Won two “Star of the Sprint” awards</li>
+                            <li>Won “Star of the Sprint” awards two times</li>
                             <li>Used Gitlab for source control and Jenkins for server setup and builds</li>
 
                         </div>
@@ -165,7 +171,7 @@
                             <li>Developed android apps with Kotlin/Java and with backend development in PHP and MySQL</li>
                             <li>Used Volley and Retrofit for API calls, Picasso for image caching</li>
                             <li>Worked on push notifications using FCM</li>
-                            <li>Implemented Google and Facebook signs ins and google maps APIs to provide location base services</li>
+                            <li>Implemented Google and Facebook signs ins and google maps APIs to provide location-based services</li>
                             <li>Contributed to numerous bug fixings and performance enhancement across various apps</li>
                             <li>Worked with PHP developers to help create APIs for the mobile apps</li>
 
@@ -177,8 +183,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Social Media Account Manager</h3>
                             <div class="subheading mb-3">Shree Swaminarayan Gurukul, Toronto ON </div>
-                            <li>Keep social media accounts of the organization updated with organizations activity.</li>
-                            <li>Help organizing and managing monthly social gathering events and managing online meetings via Microsoft teams.</li>
+                            <li>Manage social media accounts for the organization</li>
+                            <li>Help organizing and managing social gatherings</li>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2019- preset</span></div>
                     </div>
