fix: update content - update favicon icon

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <meta name="description" content="portfolio" />
+        <meta name="author" content="chetan-shankar" />
+        <title>Chetan Shankar | Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -88,11 +88,11 @@
                     <ul class="fa-ul mb-0 ml-1">
                         <div class="subheading">LANGUAGES</div>
                         <li>
-                            JavaScript, Python, TypeScript, Java, XML, Kotlin, PHP, HTML5
+                            JavaScript, Python, TypeScript, Java, Kotlin, PHP
                         </li>
                         <div class="subheading">TECHNOLOGIES</div>
                         <li>
-                            Node.js, Express, Angular, Android, JSON, AJAX, REST API, HTML5, CSS, YAML
+                            Node.js, Express.js, Angular, React, Android, JSON, AJAX, REST API, HTML5, CSS3, YAML, XML
                         </li>
                         <div class="subheading">DATABASE SYSTEMS</div>
                         <li>
@@ -100,11 +100,11 @@
                         </li>
                         <div class="subheading">CLOUD & VIRTUALIZATION</div>
                         <li>
-                            AWS, Azure, Docker
+                            AWS, Azure, Kubernetes, Docker
                         </li>
                         <div class="subheading">TOOLS</div>
                         <li>
-                            Git, Postman, NoSQLBooster, cPanel
+                            Git, Postman, Robo 3T(Robomongo), cPanel, Android Studio, WebStorm
                         </li>
                         <div class="subheading">PROJECT MANAGEMENT</div>
                         <li>
@@ -112,7 +112,7 @@
                         </li>
                         <div class="subheading">LIBRARIES</div>
                         <li>
-                            Mongoose, PrimeNG, Lodash, ng-bootstrap, jQuery,
+                            Mongoose, PrimeNG, Lodash, ng-bootstrap, jQuery, Bootstrap
                         </li>
                     </ul>
                 </div>
@@ -125,27 +125,26 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer</h3>
-                            <div class="subheading mb-3">Netex Enterprise, Toronto ON</div>
-                            <li>Got hired as a Software developer after finishing co-op terms</li>
-                            <li>Designed entirely custom UI for Home Assistant project</li>
-                            <li>Integrated Asana APIs for internal application of the Netex Enterprise</li>
-                            <li>Build website using Angular 7/8, Nodejs, and PHP with MYSQL</li>
-                            <li>Upgrading angular projects from without cli to angular 8 with cli</li>
-                            <li>Remain detail-oriented while performing code-reviews on day to day basis</li>
-                            <li>Demonstrated good communication skills while reporting project updates to manager and clients</li>
+                            <div class="subheading mb-3">Netex Enterprise, Toronto, ON</div>
+                            <ul>
+                                <li>Got hired as a part-time Software Developer following co-op terms(2x4months)</li>
+                                <li>Contribute to full-stack software development in Angular using RxJS, Nodejs with great attention to detail about application’s speed and performance </li>
+                                <li>Participate in code review sessions with senior developers to ensure the highest quality of code, identify and improve inefficiencies from exiting products</li>
+                                <li>Design custom UI for Home Assistant project and demonstrate excellent interpersonal skills while reporting project updates to team and clients</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 – Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student Researcher </h3>
-                            <div class="subheading mb-3">WIMTACH, Centennial College, Toronto ON</div>
-                            <li>Worked as a part of a team developing an order management website for McCray Optical</li>
-                            <li>Created complete backend in Node JS with Express for the website with Amazon AWS S3 integration</li>
-                            <li>Hosted the website on AWS elastic beanstalk server with docker container</li>
-                            <li>Reported to clients on a weekly basis for project updates and status via meeting and emails</li>
-                            <li>Performed code review for the team members and assisted them with bug fixes</li>
-                            <li>Integrated SendGrid email services to send automated emails</li>
+                            <div class="subheading mb-3">WIMTACH, Centennial College, Toronto, ON</div>
+                            <ul>
+                                <li>Built an order management web portal for McCray Optical using MEAN stack with the integration of AWS services such as S3, EC2, Elastic Beanstalk, and Load Balancer</li>
+                                <li>Integrated SendGrid email services for automated emails and hosted app with docker container</li>
+                                <li>Reported to clients weekly for project updates and status</li>
+                                <li>Reviewed code for the team members and assisted them with bug fixes</li>
+                            </ul>
 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2019 –August 2019 </span></div>
@@ -154,13 +153,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Associate Software Developer</h3>
                             <div class="subheading mb-3">SRKAY Consulting Group, Gujrat, India</div>
-                            <li>Worked on project SCIKEY (product of SRKAY CG) (scikey.ai), as a MEAN stack developer with agile methodology & sprint planning to ship the feature in the shortest time possible</li>
-                            <li>Gathered requirements and reported progress on daily basis using JIRA and online meetings</li>
-                            <li>Created REST APIs using express.js and integrated with Angular frontend</li>
-                            <li>Rewrote old code for optimization and to remove security vulnerability</li>
-                            <li>Won “Star of the Sprint” awards two times</li>
-                            <li>Used Gitlab for source control and Jenkins for server setup and builds</li>
-
+                            <ul>
+                                <li>Contributed to SCIKEY, a fully automated T-Commerce platform, with agile methodology and sprint planning using Jira to deliver the feature in the shortest time possible</li>
+                                <li>Led sprints, code reviews, deliveries, and reporting as a captain in micro teams and was rewarded “Star of the Sprint” twice</li>
+                                <li>Built microservices with REST APIs using Express.js and participated in front-end development using Angular, code optimization for better performance and security improvements</li>
+                                <li>Exploited GitLab source control and Jenkins for server setup and live builds</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2018 – November 2018</span></div>
                     </div>
@@ -168,23 +166,24 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Jr. Android Developer</h3>
                             <div class="subheading mb-3">Jr. Android Developer</div>
-                            <li>Developed android apps with Kotlin/Java and with backend development in PHP and MySQL</li>
-                            <li>Used Volley and Retrofit for API calls, Picasso for image caching</li>
-                            <li>Worked on push notifications using FCM</li>
-                            <li>Implemented Google and Facebook signs ins and google maps APIs to provide location-based services</li>
-                            <li>Contributed to numerous bug fixings and performance enhancement across various apps</li>
-                            <li>Worked with PHP developers to help create APIs for the mobile apps</li>
-
+                            <ul>
+                                <li>Developed android apps with Kotlin and Java with integrations of Volley and Retrofit for API calls, Picasso for image caching, and FCM for push notifications</li>
+                                <li>Implemented Google and Facebook sign-ins and google maps APIs for location-based services </li>
+                                <li>Assisted in bug fixings and performance enhancement across various apps</li>
+                                <li>Collaborated with backend developers in APIs development using PHP and MySQL</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2017 – December 2017</span></div>
                     </div>
-                    <h2 class="mb-5">Volunteer Experience</h2>
+                    <h2 class="mb-5 mt-5">Volunteer Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Social Media Account Manager</h3>
-                            <div class="subheading mb-3">Shree Swaminarayan Gurukul, Toronto ON </div>
-                            <li>Manage social media accounts for the organization</li>
-                            <li>Help organizing and managing social gatherings</li>
+                            <div class="subheading mb-3">Shree Swaminarayan Gurukul, Toronto, ON </div>
+                            <ul>
+                                <li>Manage social media accounts for the organization</li>
+                                <li>Help organizing and managing social gatherings</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2019- preset</span></div>
                     </div>
@@ -200,7 +199,7 @@
                             <h3 class="mb-0">Centennial College, Toronto, ON</h3>
                             <div class="subheading mb-3">Software Engineering Technology</div>
                             <div>Computer Science - Software Development</div>
-                            <p>GPA: 4.31</p>
+                            <p>GPA: 4.31/4.5</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2019 – December 2020</span></div>
                     </div>
@@ -208,6 +207,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Veer Narmad South Gujarat University, Surat, Gujrat, India</h3>
                             <div class="subheading mb-3">Bachelor of Computer Application</div>
+                            <div>Computer Science - Software Development</div>
                             <p>GPA: 8.87/10</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2014 – May 2017</span></div>
@@ -229,15 +229,15 @@
                             Awarded Star of the sprint award twice while working at SRAKAY Consulting Group as a Associate Software Developer.
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-award text-primary"></i></span>
                             <strong>Python Essential Training</strong> from Linked In Learning
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-award text-primary"></i></span>
                             <strong>JavaScript Essential Training</strong> from Linked In Learning
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-award text-primary"></i></span>
                             <strong>Node.js: Microservices</strong> Training from Linked In Learning
                         </li>
                     </ul>
