updated experience section

--- a/index.html
+++ b/index.html
@@ -125,23 +125,36 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer</h3>
+                            <div class="subheading mb-3">Smile CDR, Toronto, ON</div>
+                            <ul>
+                                <li>Contribute to custom development for SmileCDR, a powerful clinical data repository, and Helped clients to meet their customized requirement for the product SmileCDR, and help them to make config changes in SmileCDR</li>
+                                <li>Built a tool in Node.js to auto generate normalized SQL schema from <strong>FHIR Implementation Guides</strong> and convert SQL data into FHIR resources and manage the hosting server</li>
+                                <li>Contributed to API development for automating <strong>custom integrations for Asknicely with JIRA and Hubspot</strong></li>
+                                <li>Created a GUI featured tool to communicate with <strong>Apache Kafka</strong> a Message Queue or Broker</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 – Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-3">Netex Enterprise, Toronto, ON</div>
                             <ul>
                                 <li>Got hired as a part-time Software Developer following co-op terms(2x4months)</li>
-                                <li>Contribute to full-stack software development in Angular using RxJS, Nodejs with great attention to detail about application’s speed and performance </li>
-                                <li>Participate in code review sessions with senior developers to ensure the highest quality of code, identify and improve inefficiencies from exiting products</li>
-                                <li>Design custom UI for Home Assistant project and demonstrate excellent interpersonal skills while reporting project updates to team and clients</li>
+                                <li>Contribute to <strong>full-stack software development</strong> in Angular using RxJS, Nodejs with great attention to detail about application’s speed and performance </li>
+                                <li>Participate in <strong>code review</strong> sessions with senior developers to ensure the highest quality of code, identify and improve inefficiencies from exiting products</li>
+                                <li>Design <strong>custom UI for Home Assistant project</strong> and demonstrate excellent interpersonal skills while reporting project updates to team and clients</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2019 – Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 – December 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student Researcher </h3>
                             <div class="subheading mb-3">WIMTACH, Centennial College, Toronto, ON</div>
                             <ul>
-                                <li>Built an order management web portal for McCray Optical using MEAN stack with the integration of AWS services such as S3, EC2, Elastic Beanstalk, and Load Balancer</li>
-                                <li>Integrated SendGrid email services for automated emails and hosted app with docker container</li>
+                                <li>Built an order management web portal for McCray Optical using <strong>MEAN stack</strong> with the integration of AWS services such as S3, EC2, Elastic Beanstalk, and Load Balancer</li>
+                                <li>Integrated <strong>SendGrid</strong> email services for automated emails and hosted app with docker container</li>
                                 <li>Reported to clients weekly for project updates and status</li>
                                 <li>Reviewed code for the team members and assisted them with bug fixes</li>
                             </ul>
@@ -152,7 +165,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Associate Software Developer</h3>
-                            <div class="subheading mb-3">SRKAY Consulting Group, Gujrat, India</div>
+                            <div class="subheading mb-3">SRKAY Consulting Group, Gujarat, India</div>
                             <ul>
                                 <li>Contributed to SCIKEY, a fully automated T-Commerce platform, with agile methodology and sprint planning using Jira to deliver the feature in the shortest time possible</li>
                                 <li>Led sprints, code reviews, deliveries, and reporting as a captain in micro teams and was rewarded “Star of the Sprint” twice</li>
@@ -165,7 +178,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Jr. Android Developer</h3>
-                            <div class="subheading mb-3">Jr. Android Developer</div>
+                            <div class="subheading mb-3">Renown Infosys</div>
                             <ul>
                                 <li>Developed android apps with Kotlin and Java with integrations of Volley and Retrofit for API calls, Picasso for image caching, and FCM for push notifications</li>
                                 <li>Implemented Google and Facebook sign-ins and google maps APIs for location-based services </li>
