--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                             <h3 class="mb-0">Associate Software Developer</h3>
                             <div class="subheading mb-3">SRKAY Consulting Group, Gujarat, India</div>
                             <ul>
-                                <li>Contributed to SCIKEY, a fully automated T-Commerce platform, with agile methodology and sprint planning using Jira to deliver the feature in the shortest time possible</li>
+                                <li>Contributed to SCIKEY, a fully automated T-Commerce platform, with <strong>agile methodology</strong> and sprint planning using Jira to deliver the feature in the shortest time possible</li>
                                 <li>Led sprints, code reviews, deliveries, and reporting as a captain in micro teams and was rewarded “Star of the Sprint” twice</li>
-                                <li>Built microservices with REST APIs using Express.js and participated in front-end development using Angular, code optimization for better performance and security improvements</li>
+                                <li>Built <strong>microservices</strong> with <strong>REST APIs using Express.js</strong> and participated in front-end development using Angular, code optimization for better performance and security improvements</li>
                                 <li>Exploited GitLab source control and Jenkins for server setup and live builds</li>
                             </ul>
                         </div>
@@ -180,10 +180,10 @@
                             <h3 class="mb-0">Jr. Android Developer</h3>
                             <div class="subheading mb-3">Renown Infosys</div>
                             <ul>
-                                <li>Developed android apps with Kotlin and Java with integrations of Volley and Retrofit for API calls, Picasso for image caching, and FCM for push notifications</li>
-                                <li>Implemented Google and Facebook sign-ins and google maps APIs for location-based services </li>
+                                <li>Developed android apps with <strong>Kotlin and Java with integrations of Volley and Retrofit</strong> for API calls, Picasso for image caching, and FCM for push notifications</li>
+                                <li>Implemented <string>Google and Facebook sign-ins and google maps APIs</string> for location-based services </li>
                                 <li>Assisted in bug fixings and performance enhancement across various apps</li>
-                                <li>Collaborated with backend developers in APIs development using PHP and MySQL</li>
+                                <li>Collaborated with backend developers in <strong>APIs development using PHP and MySQL</strong></li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2017 – December 2017</span></div>
